Update coaching route and significantly refactor mobile app index
